# Mastermind

./: .gitignore  CMakeLists.txt  main.cpp
src/Core/: MasterMind.cpp  MasterMind.h  SolvingAlgorithm.cpp  SolvingAlgorithm.h
src/Utility/: RandomNumberGenerator.cpp  RandomNumberGenerator.h
